--- a/css/style-1.css
+++ b/css/style-1.css
@@ -50,7 +50,7 @@
 
   }
 }
-
+/* 뷰포트 크기마다 다르게 적용해줄 땐 공통적으로 스타일을 적용하면 media query에서 적용되지 않는 부분도 있었다 */
 /* style */
 .root{
   width: 100vw;
@@ -63,8 +63,6 @@
   width: 100vw;
   height: 100vh;
 }
-
-/* 뷰포트 크기마다 다르게 적용해줄 땐 공통적으로 스타일을 적용하면 media query에서 적용되지 않을 수 있음 */
 /* .container > div{
   width: 200px;
   height: 200px;
